Add total photos to stories list (view)

--- a/src/style/pages/_stories.sass
+++ b/src/style/pages/_stories.sass
@@ -25,3 +25,6 @@
         margin-top: $p-vertical-margin
     .appetizer
         font-style: italic
+    .total-photo
+        margin-top: -.4rem
+        font-size: 0.9rem
