--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -95,10 +95,17 @@ footer
                 text-align: center
         .album-pagination
             text-align: center
+            @media (max-width: 1024px) and (orientation: landscape)
+                font-size: 0.9rem
+                margin: 0
+                padding: 0
             .separator
                 display: inline-block
                 margin-left: .3rem
                 margin-right: .3rem
+                @media (max-width: 1024px) and (orientation: landscape)
+                    font-size: 0.7rem
+                    display: block
             .tag
                 position: fixed
                 padding: 0 0.3rem 0.1rem 0.3rem
