Better keyboard/mouse accessibility

--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -94,6 +94,7 @@ footer
                 width: $nav-bar-height
                 text-align: center
         .album-pagination
+            cursor: help
             text-align: center
             @media (max-width: 1024px) and (orientation: landscape)
                 font-size: 0.9rem
