--- a/config/generate-weblabels-webpack-plugin/jslicenses.ejs
+++ b/config/generate-weblabels-webpack-plugin/jslicenses.ejs
@@ -32,7 +32,7 @@
         }
 
         td {
-            border-bottom: 1px solid black;
+            border-bottom: 1px solid #000;
             vertical-align: top;
         }
 
@@ -43,7 +43,7 @@
         }
 
         hr {
-            border: none;
+            border: 0;
             border-bottom: 1px solid #dedede;
         }
 
