--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -102,20 +102,20 @@ footer
                 padding: 0
             .separator
                 display: inline-block
-                margin-left: .3rem
-                margin-right: .3rem
+                margin-left: 0.3rem
+                margin-right: 0.3rem
                 @media (max-width: 1024px) and (orientation: landscape)
                     font-size: 0.7rem
                     display: block
             .tag
                 position: fixed
-                padding: 0 0.3rem 0.1rem 0.3rem
+                padding: 0 0.3rem 0.1rem
                 margin-top: 0.3rem
                 font-size: 0.8rem
                 letter-spacing: 0.2px
                 font-family: 'MyBoldFont', sans-serif
                 display: inline-block
-                color: black
+                color: #000
                 @media (max-width: 1024px) and (orientation: landscape), (max-width: 400px) and (orientation: portrait)
                     display: none
         .photo-metadata-wrapper
