--- a/src/style/pages/_stories.sass
+++ b/src/style/pages/_stories.sass
@@ -26,5 +26,5 @@
     .appetizer
         font-style: italic
     .total-photo
-        margin-top: -.4rem
+        margin-top: -0.4rem
         font-size: 0.9rem
