--- a/src/style/pages/_story.sass
+++ b/src/style/pages/_story.sass
@@ -124,7 +124,7 @@ section#story
     text-align: center
     display: table
     &:focus
-        border: none
+        border: 0
     img
         margin-bottom: -4px
     .loading-icon
