--- a/src/style/base/_base.sass
+++ b/src/style/base/_base.sass
@@ -53,6 +53,20 @@ a:focus:not(.nav-item)
     to
         opacity: 1
 
+// taken from https://animate.style under Hippocratic-2.1 license
+@keyframes flash
+    from,
+    50%,
+    to
+        opacity: 1
+    25%,
+    75%
+        opacity: 0
+
+.flash
+    animation-name: flash
+    animation-duration: 1s
+
 @keyframes hourglass
     0%
         transform: rotate(0deg)
