--- a/src/style/base/_helpers.sass
+++ b/src/style/base/_helpers.sass
@@ -1,8 +1,13 @@
+@import '../base/variables'
+
 .mr-3
     margin-right: 0.3rem !important
 
 .ml-3
     margin-left: 0.3rem !important
+
+.ml-9
+    margin-left: 0.9rem !important
 
 .mt-3
     margin-top: 0.3rem !important
@@ -36,3 +41,9 @@
 
 .flex
     display: flex
+
+.vab *
+    vertical-align: bottom
+
+.round-corners
+    border-radius: 0 $border-radius-lg 0 $border-radius-lg
