--- a/src/style/base/_typography.sass
+++ b/src/style/base/_typography.sass
@@ -62,5 +62,6 @@ ul ul
     li::before
         filter: $filter-grey
 
-.tippy-box ul.blabla li::before
+.tippy-box ul.blabla li::before,
+.tippy-box img.icon
     filter: $filter-white
