Harmonize link style in story content

--- a/src/style/pages/_story.sass
+++ b/src/style/pages/_story.sass
@@ -7,7 +7,7 @@
 
 .story-content
     margin-bottom: $global-font-size
-    a[data-story]
+    a
         /* Same color as text to avoid catching the eye on links, this is not a Wikipedia page. */
         color: $body-color
         &::after
@@ -17,10 +17,13 @@
             height: 1rem
             margin-bottom: -0.1rem
             list-style: none
-            background-image: url('../icons/book-outline.svg')
             background-size: contain
             background-repeat: no-repeat
             background-position-x: center
+        &[data-story]::after
+            background-image: url('../icons/book-outline.svg')
+        &:not([data-story])::after
+            background-image: url('../icons/open-outline.svg')
     ul li
         margin-top: 1rem
         list-style: none
