Re-organise about page

--- a/src/style/layout/_form.sass
+++ b/src/style/layout/_form.sass
@@ -28,7 +28,7 @@ button:not([class^='mapboxgl-ctrl-']):not(.light-icon-button),
     &.critical:not([disabled]):focus
         background: #4f2323
 
-button.light-icon-button
+.light-icon-button
     img.icon
         filter: $filter-button-background
         transition: all 0.2s ease-in
