--- a/src/style/pages/_about.sass
+++ b/src/style/pages/_about.sass
@@ -43,22 +43,18 @@ table.data
             vertical-align: middle
             height: 32px
 
-/* some ads blocker block classes containing 'social', so let's put a random string instead */
-.yydchtxork
-    h1
-        @media (min-width: $container-column-threshold)
-            text-align: center
-            margin: auto
-            max-width: 30%
+.bunch-of-icons
     ul
-        text-align: center /* aligned to the visitor's book content */
         li
             list-style: none
             display: inline-block
             height: 2rem
-            margin: $block-space calc(#{$block-space} / 2) 0 calc(#{$block-space} / 2)
-            @media (max-width: 30rem)
-                /* fit 6 icons in a row */
-                margin: $block-space calc(#{$block-space} / 4) 0 calc(#{$block-space} / 4)
+            margin: 0 calc(#{$block-space} / 4) 0 calc(#{$block-space} / 4)
+            &:first-child
+                margin-left: 0
             img.icon
                 height: 2rem
+
+/* some ads blocker block classes containing 'social', so let's put a random string instead */
+.yydchtxork ul li
+    margin: $block-space calc(#{$block-space} / 4) 0 calc(#{$block-space} / 4)
