Highlight switch to new story

--- a/src/style/layout/_form.sass
+++ b/src/style/layout/_form.sass
@@ -1,6 +1,6 @@
 @import '../base/variables'
 
-button:not([class^='mapboxgl-ctrl-']):not(.light-icon-button),
+button:not([class^='mapboxgl-ctrl-']):not(.light-icon-button):not(.toast-close),
 .button
     background: $button-background
     color: #fff !important
