--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -5,6 +5,7 @@
 @import 'components/captcha'
 @import 'components/icon'
 @import 'components/modal'
+@import 'components/toast'
 @import 'layout/form'
 @import 'layout/grid'
 @import 'layout/navigation'
