--- a/src/style/pages/_photo.sass
+++ b/src/style/pages/_photo.sass
@@ -33,4 +33,5 @@
                 max-height: calc(100vh - 2.5 * #{$nav-bar-height} - 4 * #{$global-font-size} - 1.6rem)
             @media (max-width: 1024px) and (orientation: landscape)
                 max-width: calc(100vw - 2.5 * #{$nav-bar-height})
+                max-height: calc(100vh - 4 * #{$global-font-size} - 2.6rem)
             border-radius: $border-radius-sm
