Make adventure duration more visible

--- a/src/style/pages/_story.sass
+++ b/src/style/pages/_story.sass
@@ -1,8 +1,8 @@
 @import '../base/variables'
 
 .period
-    font-size: 0.9rem
-    font-family: 'MyBodyFont', sans-serif
+    font-size: 1rem
+    font-family: 'MyBoldFont', sans-serif
     margin-top: 0.5rem
 
 .story-content
