Make data sources expandable

--- a/src/style/base/_helpers.sass
+++ b/src/style/base/_helpers.sass
@@ -45,5 +45,8 @@
 .vab *
     vertical-align: bottom
 
+.vatb *
+    vertical-align: text-bottom
+
 .round-corners
     border-radius: 0 $border-radius-lg 0 $border-radius-lg
