Mobile: remove duplicated link to story

--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -60,7 +60,7 @@ footer
             display: none
         @media (max-width: 1024px)
             .long-item
-                display: none
+                display: none !important
             .short-item
                 display: inherit
         .nav-item
