--- a/src/style/layout/_form.sass
+++ b/src/style/layout/_form.sass
@@ -5,6 +5,8 @@ button:not([class^='mapboxgl-ctrl-']):not(.light-icon-button):not(.toast-close),
     background: $button-background
     color: #fff !important
     padding: 0.4rem 1rem 0.5rem
+    @media (max-width: 1024px)
+        padding: 0.1rem 0.5rem 0.2rem
     border-radius: 0 $border-radius-lg 0 $border-radius-lg
     cursor: pointer
     display: inline-block
