--- a/src/style/base/_helpers.sass
+++ b/src/style/base/_helpers.sass
@@ -56,3 +56,14 @@
 
 .round-corners
     border-radius: 0 $border-radius-lg 0 $border-radius-lg
+
+.large-screen
+    display: inline
+.small-screen
+    display: none
+
+@media (max-width: 768px)
+    .large-screen
+        display: none
+    .small-screen
+        display: inline
