Improve gap for mobile + desktop

--- a/src/style/layout/_grid.sass
+++ b/src/style/layout/_grid.sass
@@ -8,7 +8,7 @@
     max-width: $container-column-threshold
     &:last-child
         /* add nav bar margin to fix cut in Firefox/Chrome mobile */
-        margin-bottom: calc(#{$block-space} + #{$nav-bar-height})
+        margin-bottom: calc(#{$block-space} + #{$nav-bar-height} / 2)
 
 .row::before,
 .row::after
