Improve feedback on server error

--- a/src/style/components/_toast.sass
+++ b/src/style/components/_toast.sass
@@ -11,3 +11,9 @@
 
 .custom-toast-info
     background: #fff
+
+.custom-toast-error
+    background: #973737
+    color: #fff !important /* override */
+    .toast-close
+        color: #fff !important /* override */
