Add alt donation

--- a/src/style/pages/_about.sass
+++ b/src/style/pages/_about.sass
@@ -58,3 +58,17 @@ table.data
 /* some ads blocker block classes containing 'social', so let's put a random string instead */
 .yydchtxork ul li
     margin: $block-space calc(#{$block-space} / 4) 0 calc(#{$block-space} / 4)
+
+.address
+    display: flex
+    flex-direction: row
+    align-items: center
+    .copy-button
+        margin-bottom: -0.3rem
+        .icon
+            vertical-align: center
+            margin-left: 0.5rem
+            cursor: copy
+    input
+        width: 350px !important
+        margin-bottom: 0 !important
