Refactor photo tooltip, fix mobile view

--- a/src/style/base/_helpers.sass
+++ b/src/style/base/_helpers.sass
@@ -67,3 +67,7 @@
         display: none
     .small-screen
         display: inline
+
+.helper
+    cursor: help
+    text-decoration: underline dotted
