--- a/src/style/pages/_stories.sass
+++ b/src/style/pages/_stories.sass
@@ -29,8 +29,6 @@
         margin-top: -0.4rem
         font-size: 0.9rem
     .story-preview
-        height: 55vh /* enough space to handle all possible small screens */
-        @media (max-width: 768px) /* small/large screen limit */
-            height: 70vh
+        height: 450px /* enough space to handle small screens, fixed for helping scroll back */
         @media (min-width: $container-column-threshold)
             height: calc(2 * #{$p-vertical-margin} * #{$text-line-height} + 200px)
