Fix download view

--- a/src/style/components/_modal.sass
+++ b/src/style/components/_modal.sass
@@ -20,8 +20,9 @@
             padding: 1rem 0.5rem 0.5rem
         .modal-content
             /* add extra as quick fix https://stackoverflow.com/a/37113430 */
-            max-height: calc(100vh - 14rem)
-            overflow: auto
+            max-height: calc(100vh - 11rem)
+            overflow-y: auto
+            overflow-x: hidden
             margin: 1rem 0 /* margin to the scrollbar */
             *:first-child
                 margin-top: 0 /* reset */
