Add languages to font

--- a/src/style/pages/_story.sass
+++ b/src/style/pages/_story.sass
@@ -2,7 +2,7 @@
 
 .period
     font-size: 1rem
-    font-family: 'MyBoldFont', sans-serif
+    font-weight: bold
     margin-top: 0.5rem
 
 .story-content
@@ -93,7 +93,7 @@ section#story
                 &.select-layer
                     background-image: url('../icons/layers.svg')
             .tooltip-inside-map
-                font-family: 'MyBoldFont', sans-serif
+                font-weight: bold
                 font-size: 0.9rem
                 .mapboxgl-popup-tip
                     visibility: hidden /* hide unwanted arrow */
