--- a/src/style/pages/_story.sass
+++ b/src/style/pages/_story.sass
@@ -33,6 +33,7 @@ section#story
         max-width: 30%
     .map-extra
         margin-top: calc(#{$nav-bar-height} / 4)
+        margin-bottom: calc(#{$block-space} + #{$nav-bar-height} / 2)
         #map
             border-radius: 0 $border-radius-lg 0 $border-radius-lg
             box-shadow: 0 0 3px rgba(114, 114, 114, 0.46)
