--- a/src/style/pages/_story.sass
+++ b/src/style/pages/_story.sass
@@ -93,6 +93,7 @@ section#story
         p.attributions
             font-size: 0.8rem
             margin-top: 0.4rem
+            padding-bottom: 0.4rem
             line-height: 1.2rem
             text-align: right
     .chart-container
