--- a/src/style/pages/_story.sass
+++ b/src/style/pages/_story.sass
@@ -96,6 +96,35 @@ section#story
             padding-bottom: 0.4rem
             line-height: 1.2rem
             text-align: right
+        .cluster-content
+            transition: all 1s linear
+            z-index: 1
+            max-height: calc(100% - 0.5rem * 2 - 2rem)
+            min-height: calc(200px + 0.5rem * 3)
+            margin: 0.5rem
+            box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2)
+            min-width: calc(300px + 0.5rem * 2)
+            background: white
+            position: absolute
+            overflow-y: auto
+            &.collapsed
+                transform: translateX(calc(-305px - 0.5rem * 3))
+                opacity: 0
+            &.loading-cluster
+                display: flex
+                justify-content: center
+                align-items: center
+            ul
+                display: flex
+                flex-flow: column wrap
+                justify-content: flex-start
+                gap: 0.5rem
+                margin: 0.5rem
+                a, li
+                    display: inline-flex
+            img.cluster-thumbnail
+                border-radius: 0 $border-radius-lg 0 $border-radius-lg
+                box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2)
     .chart-container
         padding-top: 1rem /* the legend on the bottom adds space that needs to be compensated on the top */
         width: 100%
