--- a/src/style/pages/_story.sass
+++ b/src/style/pages/_story.sass
@@ -114,6 +114,8 @@ section#story
             min-height: calc(200px + 0.5rem * 3)
             box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2)
             min-width: calc(300px + 0.5rem * 2)
+            @media (max-width: 500px)
+                min-width: calc(200px + 0.5rem * 2)
             background: white
             overflow-y: auto
             &.loading-cluster
@@ -131,6 +133,8 @@ section#story
             img.cluster-thumbnail
                 border-radius: 0 $border-radius-lg 0 $border-radius-lg
                 box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2)
+                @media (max-width: 500px)
+                    width: 200px
     .chart-container
         padding-top: 1rem /* the legend on the bottom adds space that needs to be compensated on the top */
         width: 100%
