--- a/src/style/pages/_story.sass
+++ b/src/style/pages/_story.sass
@@ -101,7 +101,7 @@ section#story
             position: absolute
             z-index: 2
             margin: 0.5rem
-            border: 1px solid white
+            border: 1px solid #fff
             border-radius: 0 0 $border-radius-lg 0
             box-shadow: none !important
             padding: 0.2rem 0.6rem 0.3rem !important
@@ -116,7 +116,7 @@ section#story
             min-width: calc(300px + 0.5rem * 2)
             @media (max-width: 500px)
                 min-width: calc(200px + 0.5rem * 2)
-            background: white
+            background: #fff
             overflow-y: auto
             &.loading-cluster
                 display: flex
@@ -163,4 +163,4 @@ button.mapboxgl-popup-close-button
     padding: 0.1rem 0.5rem 0.3rem !important
     box-shadow: none !important
     transition: none !important
-    border: 1px solid white
+    border: 1px solid #fff
