fix mini screen

--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -68,7 +68,7 @@ footer
             padding: $nav-item-space calc(#{$nav-item-space} * 3 / 2)
             display: inline-block
             font-size: $nav-font-size
-            &.branding
+            &.must-fit
                 @media (max-width: 1024px)
                     /* padding and margin to minimum to avoid flex wrap */
                     padding: calc(#{$nav-item-space} * 2 * 1.25) 0 0 0
