--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -71,8 +71,8 @@ footer
             &.must-fit
                 @media (max-width: 1024px)
                     /* padding and margin to minimum to avoid flex wrap */
-                    padding: calc(#{$nav-item-space} * 2 * 1.25) 0 0 0
-                    margin: 0
+                    padding: 0 0.4rem
+                    margin: calc(#{$nav-item-space} * 2 * 1.25) 0 0 0
                     font-size: calc(#{$nav-font-size} / 1.25)
             align-items: center
             .icon
