--- a/src/style/pages/_stories.sass
+++ b/src/style/pages/_stories.sass
@@ -25,6 +25,17 @@
         margin-top: $p-vertical-margin
     .appetizer
         font-style: italic
+        display: block
+        height: 5rem
+        position: relative
+        overflow: hidden
+        .gradient-white
+            position: absolute
+            bottom: 0
+            left: 0
+            width: 100%
+            height: calc(#{$global-font-size} * 4)
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(255, 255, 255, 1) 100%)
     .total-photo
         margin-top: -0.4rem
         font-size: 0.9rem
